force-app/main/default/objects/ssot__ProductCategoryProduct__dlm/fields/ssot__ActiveFromDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__ActiveFromDateTime__c</fullName>
    <label>Active From Date Time</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>ActiveFromDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>