force-app/main/default/objects/ssot__ProductCategoryProduct__dlm/fields/ssot__rel_1697761175076_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761175076_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GoodsProduct_Id_map_ProductCategoryP_rel</label>
    <referenceTo>ssot__GoodsProduct__dlm</referenceTo>
    <relationshipLabel>GoodsProduct_Id_map_ProductCategoryP_rel</relationshipLabel>
    <relationshipName>rel_1697761175076_end</relationshipName>
    <type>Lookup</type>
</CustomField>