force-app/main/default/objects/ssot__ProductCategoryProduct__dlm/fields/ssot__rel_1697761188815_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761188815_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MasterProduct_Id_map_ProductCategory_rel</label>
    <referenceTo>ssot__MasterProduct__dlm</referenceTo>
    <relationshipLabel>MasterProduct_Id_map_ProductCategory_rel</relationshipLabel>
    <relationshipName>rel_1697761188815_end</relationshipName>
    <type>Lookup</type>
</CustomField>