force-app/main/default/objects/ssot__ProductCategoryProduct__dlm/fields/ssot__rel_1697761194241_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761194241_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProductCategoryProduct_ProductCatego_rel</label>
    <referenceTo>ssot__ProductCategory__dlm</referenceTo>
    <relationshipLabel>ProductCategoryProduct_ProductCatego_rel</relationshipLabel>
    <relationshipName>rel_1697761194241_end</relationshipName>
    <type>Lookup</type>
</CustomField>